fix:Optimize log printing and rule synchronization